_sass/_base.scss
/* ... */
// CV

.cv {
  margin-bottom: 40px;

  .card {
    background-color: var(--global-card-bg-color);
    border: 1px solid var(--global-divider-color);
    border-radius: 0.5rem;

    .list-group-item {
      background-color: inherit;
      border-color: var(--global-divider-color);

      .badge {
        color: var(--global-card-bg-color) !important;
        background-color: var(--global-theme-color) !important;
        border-radius: 0.25rem;
      }
    }
  }
}

.table-cv-map {
  background-color: transparent;
  border: none;
  color: var(--global-text-color);
}

.date-column {
  width: 75px;
  transform: translateX(-15px) translateY(-5px);
}

// Repositories

@media (min-width: 768px) {
  .repo {
    max-width: 50%;
  }
}

// Blog

.header-bar {
  border-bottom: 1px solid var(--global-divider-color);
  text-align: center;
  padding-top: 2rem;
  padding-bottom: 3rem;

  h1 {
    color: var(--global-theme-color);
    font-size: 5rem;
  }
}

.tag-category-list {
  border-bottom: 1px solid var(--global-divider-color);
  text-align: center;
  padding-top: 1rem;

  ul {
    justify-content: center;
    display: flow-root;

    p,
    li {
      list-style: none;
      display: inline-block;
      padding: 1rem 0.5rem;
      color: var(--global-text-color-light);
    }
  }
}

.post-title {
  mjx-container[jax="CHTML"][display="true"] {
    display: unset;
  }
}

.post-list {
  margin: 0;
  margin-bottom: 40px;
  padding: 0;

  li {
    border-bottom: 1px solid var(--global-divider-color);
    list-style: none;
    padding-top: 2rem;
    padding-bottom: 2rem;

    .post-meta {
      color: var(--global-text-color-light);
      font-size: 0.875rem;
      margin-bottom: 0;
    }

    .post-tags {
      color: var(--global-text-color-light);
      font-size: 0.875rem;
      padding-top: 0.25rem;
      padding-bottom: 0;
    }

    a {
      color: var(--global-text-color);
      text-decoration: none;

      &:hover {
        color: var(--global-theme-color);
      }
    }

    mjx-container[jax="CHTML"][display="true"] {
      display: unset;
    }
  }
}

.pagination {
  .page-item {
    .page-link {
      color: var(--global-text-color);
      padding: 0.75rem 1.15rem;

      &:hover {
        color: $black-color;
      }
    }

    &.active .page-link {
      color: $white-color;
      background-color: var(--global-theme-color);

      &:hover {
        background-color: var(--global-theme-color);
      }
    }
  }
}

// diff2html - Fix for diff2html line number overflow

.d2h-diff-table {
  position: relative;
}

// Distill

.distill {
  a:hover {
    border-bottom-color: var(--global-theme-color);
    text-decoration: none;
  }
}

// Projects

.projects {
  a {
    text-decoration: none;

    &:hover {
      .card-title {
        color: var(--global-theme-color);
      }
    }
  }

  .card {
    img {
      width: 100%;
    }
  }

  .col {
    padding-bottom: 1rem;
  }

  .grid-sizer,
  .grid-item {
    width: 250px;
    margin-bottom: 10px;
  }

  h2.category {
    color: var(--global-text-color-light);
    border-bottom: 1px solid var(--global-divider-color);
    padding-top: 0.5rem;
    margin-top: 2rem;
    margin-bottom: 1rem;
    text-align: right;
    font-weight: 400;
  }
}
/* ... */

